# cmd/default_/controllers/serverCmd.go
@@ -20,7 +20,7 @@ import (
 // @Param        Signature  header  string  true  "sdfwefwfwfwfsdfwfwf"
 // @Success      200  {string}  string  "{"msg": "hello  Razeen"}"
 // @Failure      400  {string}  string  "{"msg": "who    are  you"}"
-// @Failure      401  {string}  string  "err info"
+// @Failure      401  {string}  string  "Unauthorized"
 // @Router       /api/save [post]
 func saveHandler(ctx echo.Context) error {
 	var msg meson_msg.SaveFileMsg
@@ -38,7 +38,7 @@ func saveHandler(ctx echo.Context) error {
 // @Param        Signature  header  string  true  "sdfwefwfwfwfsdfwfwf"
 // @Success      200  {string}  string  "{"msg": "hello  Razeen"}"
 // @Failure      400  {string}  string  "{"msg": "who    are  you"}"
-// @Failure      401  {string}  string  "err info"
+// @Failure      401  {string}  string  "Unauthorized"
 // @Router       /api/delete/:nameHash [get]
 func deleteHandler(ctx echo.Context) error {
 	nameHash := ctx.Param("nameHash")
@@ -48,6 +48,16 @@ func deleteHandler(ctx echo.Context) error {
 	return ctx.String(200, nameHash)
 }
 
+// @Summary      delete file command
+// @Description  delete file on terminal disk
+// @Tags         server cmd
+// @Produce      json
+// @Param        nameHash  path  string  true  "0dea69026ee1c698"
+// @Param        Signature  header  string  true  "sdfwefwfwfwfsdfwfwf"
+// @Success      200  {string}  string  "{"msg": "hello  Razeen"}"
+// @Failure      400  {string}  string  "{"msg": "who    are  you"}"
+// @Failure      401  {string}  string  "Unauthorized"
+// @Router       /api/delete/:nameHash [get]
 func listLogFileHandler(ctx echo.Context) error {
 	logFiles := []byte{}
 	//all logs
@@ -82,19 +92,58 @@ func listLogFileHandler(ctx echo.Context) error {
 	return ctx.Blob(http.StatusOK, "text/html; charset=utf-8", logFiles)
 }
 
+// @Summary      delete file command
+// @Description  delete file on terminal disk
+// @Tags         server cmd
+// @Produce      json
+// @Param        nameHash  path  string  true  "0dea69026ee1c698"
+// @Param        Signature  header  string  true  "sdfwefwfwfwfsdfwfwf"
+// @Success      200  {string}  string  "{"msg": "hello  Razeen"}"
+// @Failure      400  {string}  string  "{"msg": "who    are  you"}"
+// @Failure      401  {string}  string  "Unauthorized"
+// @Router       /api/delete/:nameHash [get]
 func checkLogHandler(ctx echo.Context) error {
 	file := ctx.Param("*")
 	return ctx.File(filepath.Join(path_util.GetAbsPath("./logs"), file))
 }
 
+// @Summary      restart node command
+// @Description  restart node command
+// @Tags         server cmd
+// @Produce      json
+// @Param        nameHash  path  string  true  "0dea69026ee1c698"
+// @Param        Signature  header  string  true  "sdfwefwfwfwfsdfwfwf"
+// @Success      200  {string}  string  "{"msg": "hello  Razeen"}"
+// @Failure      400  {string}  string  "error msg"
+// @Failure      401  {string}  string  "Unauthorized"
+// @Router       /api/restart [get]
 func restartHandler(ctx echo.Context) error {
 	return ctx.String(200, "")
 }
 
+// @Summary      check ScheduleJob running status
+// @Description  check ScheduleJob running status
+// @Tags         server cmd
+// @Produce      json
+// @Param        nameHash  path  string  true  "0dea69026ee1c698"
+// @Param        Signature  header  string  true  "sdfwefwfwfwfsdfwfwf"
+// @Success      200  {string}  string  "{"msg": "hello  Razeen"}"
+// @Failure      400  {string}  string  "error msg"
+// @Failure      401  {string}  string  "Unauthorized"
+// @Router       /api/schedulejobstatus [get]
 func scheduleJobStatusHandler(ctx echo.Context) error {
 	return ctx.String(200, "")
 }
 
+// @Summary      get node status
+// @Description  get node status
+// @Tags         server cmd
+// @Produce      json
+// @Param        Signature  header  string  true  "sdfwefwfwfwfsdfwfwf"
+// @Success      200  {string}  string  "{"msg": "hello  Razeen"}"
+// @Failure      400  {string}  string  "error msg"
+// @Failure      401  {string}  string  "Unauthorized"
+// @Router       /api/nodestatus [get]
 func nodeStatusHandler(ctx echo.Context) error {
 	return ctx.String(200, "")
 }
